# find-evil

./: .gitignore  ACCURACY_REPORT.md  ARCHITECTURE.md  BYPASS_TESTING.md  DATASETS.md  DEMO_VIDEO_SCRIPT.md  DEVPOST.md  LICENSE  README.md  demo.sh  find_evil_custom.yar  install.sh  pyproject.toml  requirements.txt
.claude/: settings.json
agent/: __init__.py  loop.py  reasoning.py
assets/: README.md  architecture.html  cover.html  proof.html  slide1_problem.html  slide2_close.html
case-templates/: CLAUDE.md
docs/: DEVPOST_FORM.md  VIDEO_PLAN.md  YOUTUBE.md
docs/sample_run/: README.md  evidence_hashes.json  findings.json  report.html  tool_calls.jsonl
mcp_server/: __init__.py  config.py  logger.py  safe_exec.py  server.py  tools.py
reports/: __init__.py  generator.py  models.py
tests/: conftest.py
tests/benchmark/: run_benchmark.py
tests/benchmark/ground_truth/: synthetic.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_agent_pipeline.py  test_guardrails.py  test_logger.py  test_reasoning.py  test_report_integrity.py  test_tools_blocking.py
